...
    <string name="add_5_drops_reagent_1">Add <b>5 drops</b> of <b>reagent 1</b> to the sample</string>
    <string name="add_10_drops_nh4_reagent">Add <b>10 drops</b> of NH4+-1 reagent</string>
    <string name="cap_vial_and_shake_rapidly">Cap vial and shake rapidly for <b>5 seconds</b>. Remove cap.</string>
    <string name="wait_20_minutes_swirl_twice">Wait <b>20 minutes</b>. Swirl twice during the reaction period</string>
    <string name="swirl_to_mix_reagent">Swirl the sample to mix the reagent</string>
    <string name="put_6_drops_of_reagent_in_another_container">In the smaller container tube put <b>6 drops</b> of <b>reagent 2</b></string>
    <string name="dip_strip_15_seconds_in_reagent_and_remove">Dip the strip for <b>15 seconds</b> in the small tube containing <b>reagent 2</b>.</string>
    <string name="place_tube_in_provided_rack">Place the tube in the provided rack.</string>
    <string name="dip_strip_into_water_and_remove">Dip a strip into sample and remove immediately.</string>
    <string name="dip_strip_into_water_1_second">Dip strip into sample for <b>1 second</b> and remove.</string>
    <string name="dip_strip_in_water_2_seconds">Dip a strip in the sample for at least <b>2 seconds</b> and remove.</string>
    <string name="dip_strip_5_seconds_and_remove">Dip a strip into sample for <b>5 seconds</b> and remove.</string>
    <string name="dip_strip_15_seconds_and_remove">Dip a strip into sample for <b>15 seconds</b> and remove.</string>
...
